@@ -14,7 +14,6 @@ import org.joda.time.DateTime;
 import org.joda.time.format.DateTimeFormat;
 import org.joda.time.format.DateTimeFormatter;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 
 import java.math.BigDecimal;
@@ -26,21 +25,13 @@ import java.util.Map;
  */
 @Service
 public class AccountHandleServiceImpl implements AccountHandleService {
-
-    @Value("${contractConfig.dayTypeNames}")
-    private String dayTypeNames;
-    @Value("${contractConfig.poundageNames}")
-    private String poundageNames;
-    @Value("${contractConfig.paymentDaysNames}")
-    private String paymentDaysNames;
-    @Value("${contractConfig.youfuStartTimeNames}")
-    private String youfuStartTimeNames;
-    @Value("${contractConfig.startPriceNames}")
-    private String startPriceNames;
-    @Value("${contractConfig.commissionNames}")
-    private String commissionNames;
-    @Value("${contractConfig.groupBuyingStartTimeNames}")
-    private String groupBuyingStartTime;
+    private static String dayTypeNames = "youfu_billing_cycle";
+    private static String poundageNames = "poundage_huigou,poundage_radio,youfu_poundage";
+    private static String paymentDaysNames = "settle_day,account_period_huigou,youfu_payment_day";
+    private static String youfuStartTimeNames = "youfu_start_time";
+    private static String startPriceNames = "youfu_start_price";
+    private static String commissionNames = "group_buying_commission";
+    private static String groupBuyingStartTime = "group_buying_start_time";
     private static DateTimeFormatter dateFormat = DateTimeFormat.forPattern("yyyy-MM-dd");
     @Autowired
     private RemoteSettlementService remoteAccountSettlementService;
@@ -50,8 +41,8 @@ public class AccountHandleServiceImpl implements AccountHandleService {
             throw new APIException(ResultCodes.ContractNotAssignedForMerchant);
         }
         Map<String, String> result = detail.getParameters();
-        AcMerchantSettlement settlementRequest =new  AcMerchantSettlement();
-        AcMerchantSettlementCommission settlementCommissionRequest =new  AcMerchantSettlementCommission();
+        AcMerchantSettlement settlementRequest = new AcMerchantSettlement();
+        AcMerchantSettlementCommission settlementCommissionRequest = new AcMerchantSettlementCommission();
         setMerchantSettlementRequest(result, settlementRequest, detail.getMchId());
         setMerchantSettlementCommissionRequest(result, settlementCommissionRequest);
         if (detail.getParentId() == null) {//主合同
@@ -62,29 +53,29 @@ public class AccountHandleServiceImpl implements AccountHandleService {
             throw new APIException(res.getCode(), res.getMsg());
         }
         AcMerchantSettlement settlement = res.getData();
-        Long settlementId=null;
-        if(settlement==null){//若商家已经存在清算记录
-            if(settlementRequest.getStartTime()==null){
+        Long settlementId = null;
+        if (settlement == null) {//若商家已经存在清算记录
+            if (settlementRequest.getStartTime() == null) {
                 settlementRequest.setStartTime(DateUtils.getTodayDate());
             }
             APIResult<AcMerchantSettlement> addSettlementRes = remoteAccountSettlementService.addSettlement(settlementRequest);
             if (addSettlementRes.getCode() != 0) {
                 throw new APIException(res.getCode(), res.getMsg());
             }
-            settlementId=addSettlementRes.getData().getId();
-        }else{
+            settlementId = addSettlementRes.getData().getId();
+        } else {
             settlementRequest.setId(settlement.getId());
-            if(settlementRequest.getStartTime()==null){
+            if (settlementRequest.getStartTime() == null) {
                 settlementRequest.setStartTime(DateUtils.getTomorrowDate());
             }
             APIResult<AcMerchantSettlement> updateSettlementRes = remoteAccountSettlementService.updateSettlement(settlement.getId(), settlementRequest);
             if (updateSettlementRes.getCode() != 0) {
                 throw new APIException(res.getCode(), res.getMsg());
             }
-            settlementId=updateSettlementRes.getData().getId();
+            settlementId = updateSettlementRes.getData().getId();
         }
         settlementCommissionRequest.setSettlementId(settlementId);
-        if(settlementCommissionRequest.getGroupon()!=null){//团购佣金
+        if (settlementCommissionRequest.getGroupon() != null) {//团购佣金
             APIResult<AcMerchantSettlement> settlementCommissionRes = remoteAccountSettlementService.addOrUpdateCommission(settlementCommissionRequest);
             if (settlementCommissionRes.getCode() != 0) {
                 throw new APIException(res.getCode(), res.getMsg());
@@ -93,16 +84,22 @@ public class AccountHandleServiceImpl implements AccountHandleService {
     }
 
     private void validate(BigDecimal poundage, Long paymentDays, DayType dateType, Date startTimeStr, BigDecimal startPrice) {
-        if (poundage == null || paymentDays == null || dateType == null || startPrice == null) {
-            throw new APIException(ResultCodes.PoundageOrPayDaysIsNull);
+        if (poundage == null) {
+            throw new APIException(ResultCodes.Fail, "手续费不能为空");
+        } else if (paymentDays == null) {
+            throw new APIException(ResultCodes.Fail, "账期不能为空");
+        } else if (dateType == null) {
+            throw new APIException(ResultCodes.Fail, "数据类型不能为空");
+        } else if (startPrice == null) {
+            throw new APIException(ResultCodes.Fail, "起始金额不能为空");
         }
     }
 
     private void setMerchantSettlementCommissionRequest(Map<String, String> result, AcMerchantSettlementCommission settlementCommissionRequest) {
         String startTimeStr = getValue(result, groupBuyingStartTime);//开始时间
-        String commissionStr= getValue(result, commissionNames);//佣金
-        BigDecimal commission=commissionStr==null?null:new BigDecimal(commissionStr);
-        Date dateTime= startTimeStr==null?null: DateTime.parse(startTimeStr, dateFormat).toDate();
+        String commissionStr = getValue(result, commissionNames);//佣金
+        BigDecimal commission = commissionStr == null ? null : new BigDecimal(commissionStr);
+        Date dateTime = startTimeStr == null ? null : DateTime.parse(startTimeStr, dateFormat).toDate();
         settlementCommissionRequest.setGroupon(commission);
         settlementCommissionRequest.setStartTime(dateTime);
     }
@@ -122,17 +119,17 @@ public class AccountHandleServiceImpl implements AccountHandleService {
 
     private void setMerchantSettlementRequest(Map<String, String> result, AcMerchantSettlement request, Long mchId) {
         String poundageStr = getValue(result, poundageNames);//手续费
-        String paymentDaysStr =getValue(result, paymentDaysNames);//账期
+        String paymentDaysStr = getValue(result, paymentDaysNames);//账期
         String dateTypeStr = getValue(result, dayTypeNames);//类型
         String startTimeStr = getValue(result, youfuStartTimeNames);//开始时间
         String startPriceStr = getValue(result, startPriceNames);//起结金额
-        BigDecimal poundage=poundageStr==null?null:new BigDecimal(poundageStr);
-        Integer dateType=dateTypeStr==null?null:new Integer(dateTypeStr);
-        Long paymentDays=paymentDaysStr==null?null:Long.valueOf(paymentDaysStr);
-        Date dateTime= startTimeStr==null?null:DateTime.parse(startTimeStr, dateFormat).toDate();
-        BigDecimal startPrice=startPriceStr==null?null:new BigDecimal(startPriceStr);
+        BigDecimal poundage = poundageStr == null ? null : new BigDecimal(poundageStr);
+        Integer dateType = dateTypeStr == null ? null : new Integer(dateTypeStr);
+        Long paymentDays = paymentDaysStr == null ? null : Long.valueOf(paymentDaysStr);
+        Date dateTime = startTimeStr == null ? null : DateTime.parse(startTimeStr, dateFormat).toDate();
+        BigDecimal startPrice = startPriceStr == null ? null : new BigDecimal(startPriceStr);
         request.setEnabled(true);
-        request.setDayType( DayType.toEnum(dateType));
+        request.setDayType(DayType.toEnum(dateType));
         request.setPoundage(poundage);
         request.setDay(paymentDays);
         request.setStartPrice(startPrice);
